WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211605
MayBegin wheel event in a <select> doesn't flash the scrollers
https://bugs.webkit.org/show_bug.cgi?id=211605
Summary
MayBegin wheel event in a <select> doesn't flash the scrollers
Simon Fraser (smfr)
Reported
2020-05-07 18:10:03 PDT
findEnclosingScrollableContainer() doesn't handle events with no deltas, like the MayBegin event has.
Attachments
Patch
(20.19 KB, patch)
2020-05-07 20:58 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(20.18 KB, patch)
2020-05-07 21:30 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-07 20:58:53 PDT
Created
attachment 398831
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-07 21:30:40 PDT
Created
attachment 398833
[details]
Patch
EWS
Comment 3
2020-05-07 22:49:04 PDT
Committed
r261368
: <
https://trac.webkit.org/changeset/261368
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398833
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-05-07 22:50:16 PDT
<
rdar://problem/63008502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug